--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -55,7 +55,7 @@
                 margin-bottom: 2rem;
 
                 * {
-                    color: #212529 !important;
+                    // color: #212529 !important;
                     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;			
                 }	   
             }
