--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -41,7 +41,7 @@
 
                 .post-author, .post-category {
                     a {
-                        color: $app-client-blue;
+                        color: $app-blue;
                         text-decoration: none;
                     }
                 }
@@ -55,9 +55,8 @@
                 margin-bottom: 2rem;
 
                 * {
-                    // color: #212529 !important;
                     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;			
-                }	   
+                }
             }
 
             .post-next {
