--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -57,6 +57,10 @@
                 * {
                     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;			
                 }
+
+                p {
+                    line-height: 1.9;
+                }
             }
 
             .post-next {
