Updated colors in `_variables.scss`

--- a/resources/sass/utils/_variables.scss
+++ b/resources/sass/utils/_variables.scss
@@ -28,7 +28,15 @@ $app-secondary-light: #51b1cb;
 $app-secondary-dark: #00546c;
 
 $app-accent: #ffd54f;
+$app-accent-light: #ffff81;
+$app-accent-dark: #c8a415;
 
+$app-emphasis: #1A2233;
+$app-emphasis-light: #42495d;
+$app-emphasis-dark: #00000c;
+
+
+// App palette
 $app-palette-1: #4144C1;
 $app-palette-2: #456BCB;
 $app-palette-3: #4682B4;
@@ -44,7 +52,3 @@ $app-white-dark: #c5c7c9;
 $app-black: #2c2c2c;
 $app-black-light: #555555;
 $app-black-dark: #000000;
-
-$app-blue: #1A2233;
-$app-blue-light: #42495d;
-$app-blue-dark: #00000c;
