Updated colors in `post.scss`

--- a/resources/sass/post.scss
+++ b/resources/sass/post.scss
@@ -41,7 +41,7 @@
 
                 .post-author, .post-category {
                     a {
-                        color: $app-blue;
+                        color: $app-emphasis;
                         text-decoration: none;
                     }
                 }
