Simplifyed `alpha-color` function

--- a/resources/sass/utils/_functions.scss
+++ b/resources/sass/utils/_functions.scss
@@ -1,5 +1,6 @@
 // Functions.
 
 @function alpha-color($color, $alpha) {
-    @return rgba(red($color), green($color), blue($color), $alpha);
+    // @return rgba(red($color), green($color), blue($color), $alpha);
+    @return rgba($color, $alpha);
 }
