Added `$hoverTextColor` to `app_button` mixin

--- a/resources/sass/utils/_mixins.scss
+++ b/resources/sass/utils/_mixins.scss
@@ -25,11 +25,12 @@
 }
 
 
-@mixin app_button($bgColor, $hoverBgColor, $textColor) {
+@mixin app_button($bgColor, $hoverBgColor, $textColor, $hoverTextColor) {
     background-color: $bgColor;
     color: $textColor;
     
     &:hover {
         background-color: $hoverBgColor;
+        color: $hoverTextColor;
     }
 }
