Added two bootstrap colors in `_variables.scss`

--- a/resources/sass/utils/_variables.scss
+++ b/resources/sass/utils/_variables.scss
@@ -52,3 +52,8 @@ $app-white-dark: #c5c7c9;
 $app-black: #2c2c2c;
 $app-black-light: #555555;
 $app-black-dark: #000000;
+
+
+// Bootstrap colors
+$bootstrap-muted: #6c757d;
+$bootstrap-link: #007bff;
