Added `app_overlay` style mixin

--- a/resources/sass/utils/_mixins.scss
+++ b/resources/sass/utils/_mixins.scss
@@ -34,3 +34,17 @@
         color: $hoverTextColor;
     }
 }
+
+
+@mixin app_overlay($color, $opacity) {
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        background: $color;
+        opacity: $opacity;
+    }
+}
