Updated sans serif font family in `_variables.scss`

--- a/resources/sass/utils/_variables.scss
+++ b/resources/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: Helvetica, Tahoma;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
